--- a/public/assets/css/custome.css
+++ b/public/assets/css/custome.css
@@ -2,7 +2,7 @@
 .underline{
     height: 4px;
     width: 100px;
-    background-color: #2874f0;
+    background-color: #B23E3E;
     margin: 10px 0px;
 }
 
@@ -44,7 +44,7 @@
     border-bottom: 1px solid #ccc;
 }
 .main-navbar .top-navbar{
-    background-color: #2874f0;
+    background-color: #997E27;
     padding-top: 10px;
     padding-bottom: 10px;
 }
@@ -68,7 +68,7 @@
 .main-navbar .top-navbar .dropdown-menu .dropdown-item i{
     width: 20px;
     text-align: center;
-    color: #2874f0;
+    color: #997E27;
     font-size: 14px;
 }
 .main-navbar .navbar{
@@ -184,7 +184,7 @@
 /* Product View */
 .product-view .product-name{
     font-size: 24px;
-    color: #2874f0;
+    color: #B23E3E;
 }
 .product-view .product-name .label-stock{
     font-size: 13px;
@@ -220,7 +220,7 @@
     margin-top: 10px;
 }
 .product-view .btn1:hover{
-    background-color: #2874f0;
+    background-color: #B23E3E;
     color: #fff;
 }
 .product-view .input-quantity{
@@ -288,7 +288,7 @@
     font-size: 10px;
 }
 .shopping-cart .btn1:hover{
-    background-color: #2874f0;
+    background-color: #997E27;
     color: #fff;
 }
 .shopping-cart .input-quantity{
@@ -323,7 +323,7 @@
 /* Footer */
 .footer-area{
     padding: 40px 0px;
-    background-color: #2874f0;
+    background-color: #997E27;
     color: #fff;
 }
 .footer-area a{
